--- a/gb/19/10/15/n11589970.md
+++ b/gb/19/10/15/n11589970.md
@@ -1,63 +1,43 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mfaidu357/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mfaidu357/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/mfaidu357/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mfaidu357/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/mfaidu357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mfaidu357/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/mfaidu357/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mfaidu357/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/mfaidu357/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mfaidu357/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/mfaidu357/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mfaidu357/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/mfaidu357/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mfaidu357/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/mfaidu357/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mfaidu357/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/mfaidu357/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mfaidu357/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/mfaidu357/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mfaidu357/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mfaidu357/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mfaidu357/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mfaidu357/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mfaidu357/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>“生厨余”量不足 外埔绿能发电恐卡卡</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/e50583d453e7dcef268d715902ab0639-600x400.jpg" />
-<h6>议员陈清龙质疑为何不生熟厨余一起收运？（黄玉燕／大纪元）
-</h6>
-<hr>
-<p>【大纪元2019年10月15日讯】（大纪元记者黄玉燕台湾台中报导）台中市政府推动<ahref="https://github.com/mfaidu357/djy/blob/master/gb/tag/%E7%BB%BF%E8%83%BD.md#1">绿能</a><ahref="https://github.com/mfaidu357/djy/blob/master/gb/tag/%E5%8F%91%E7%94%B5.md#1">发电</a>，打造外埔绿能生态园区，以促参法委外营运，引进<ahref="https://github.com/mfaidu357/djy/blob/master/gb/tag/%E7%94%9F%E5%8E%A8%E4%BD%99.md#1">生厨余</a>与稻秆气化双核心<ahref="https://github.com/mfaidu357/djy/blob/master/gb/tag/%E5%8F%91%E7%94%B5.md#1">发电</a>技术，其中厌氧设备已正式营运，但厂商目前尚未取得发电业许可证。对此，议员陈清龙指出，依据资料，就算达成全市29区的生厨余的收运，也并无法满足契约要求，质疑为何不生熟厨余一起收运?议员黄守达则批市府宣导不力，许多市民无法分辨所谓的“生厨余”。环保局长吴志超答询表示，待实施一年后，会考虑与厂商重新协议。</p>
-<p>吴志超表示，配合园区微生物驯养作业期程，现阶段尚未大量投料处理，因此今年7月开始，采分区分阶段收运策略，优先从外埔周围地区启动<ahref="https://github.com/mfaidu357/djy/blob/master/gb/tag/%E7%94%9F%E5%8E%A8%E4%BD%99.md#1">生厨余</a>收运，逐渐扩大至全市各区，预计10月17日全市皆将纳入收运范围。而截至9月，每日最大生厨余处理量约29公吨，初估10月中旬全市收运生厨余后，预估提升至每日45至50公吨。</p>
-<p>另外，有关园区设备发电执行现况，厌氧设备已于今年7月9日营运，目前产出可供发电的沼气为每日1,500?立方公尺，达预估目标产气量62%。后续将待厂商取得发电业筹设许可、台电并联审查等，才能达到实际发电效益。另外，气化设备仍在测试阶段，尚未开始营运，预计明年6月试运转后开始营运。</p>
-<p>针对议员陈清龙建议应重新检讨契约条件，包括生厨余、稻秆、废树枝等料源应由厂商自行收运供料。吴志超说明，生厨余厌氧发电及稻秆气化发电等技术较为创新，厂商营运也较具挑战性，为提高投资意愿，因此由市府代为收运，这是前市府与厂商的协议条件，新市府上任后，先观察厂商营运情形，若有必要将适时调整。</p>
-<p>环保局回应议员黄守达有关“生厨余”分类，指出生厨余是未经烹煮或料理前所挑剩的菜叶、水果皮、咖啡渣、茶叶渣等；蛋壳、硬果核、硬果壳、长纤维笋壳、甘蔗皮、玉米壳等、凤梨冠芽、花材，以及塑胶绳袋、橡皮筋、稻秆等不利进厂处理的生厨余与杂质，请勿丢入回收桶，请民众多利用绿圆宝盛装，一起减量做环保。</p>
-<p>责任编辑：陈真</p>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
 
+<h6></h6>
+<hr>[replace]（<a href=<ahref;<a href=<ahref;"https://www.epochtimes.com/gb/2=><a href="https://github.com/eizauy3553/djy/blob/master/gb/2;  = ;		= ;script=a;http://cn.epochtimes.com/gb/=https://github.com/eizauy3553/djy/blob/master/gb/;http://www.epochtimes.com/gb/=https://github.com/eizauy3553/djy/blob/master/gb/;https://www.epochtimes.com/gb/=https://github.com/eizauy3553/djy/blob/master/gb/;.html=.md#1;.htm=.md#1;" height=" b;/i6/=https://www.epochtimes.com/i6/;<iframe=<a;/iframe>=/a>
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/19/8/5/n11432888.md#1">湾区太阳能发电板 真正节省电费（一）</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/19/8/8/n11440737.md#1">亚马逊将在维州建立太阳能发电场</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/19/8/19/n11462955.md#1">澳两党一致反对太平洋岛国淘汰火煤发电要求</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/19/8/23/n11471839.md#1">白鹿急扑  北水局确认供水闸门及发电系统运作</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/19/8/28/n11483206.md#1">太阳能电池——在阳光普照的同时发电</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/19/9/28/n11552015.md#1">ACT新垃圾填埋发电 为五千多户提供电力</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/15/n12881887.md#1">低海拔水蜜桃竞赛 太平农友张志成夺冠</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/15/n12881812.md#1">中市寻找替代水源 中央公园水井日出估千吨</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/14/n12880056.md#1">手机捕捉温暖角落  中市“社猎”竞赛开跑</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/14/n12879770.md#1">台铁司机袁淳修告别式 林佳龙卢秀燕吊唁致意</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/3/n11298528.md#1">报告：洛市政厅老鼠是游民垃圾招来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/2/n12992333.md#1">游民营毁掉南加第二大景点</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/25/n13048300.md#1">洛县无家可归者人满为患 警长倡宣布紧急状态</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/1/n13059692.md#1">圣塔克拉拉县获批200万美元 用于垃圾清理</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9782273.md#1" target="_blank">高天韵：锡盖特博物馆 唤醒罗马尼亚的记忆</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11247031.md#1" target="_blank">加拿大渥太华市长连续9年宣布 法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/5/n11701848.md#1" target="_blank">袁斌：从《共产党宣言》看共产主义的破坏性</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7543764.md#1" target="_blank">军转干部感恩法轮大法给了第二次生命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/8/n12867405.md#1">【未解之谜】远古科技：20亿年前核反应堆</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/11/n12872178.md#1">英国羊群排成神秘的“麦田圈” 令人费解</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/3/26/n12838624.md#1">昴星人传神谕  火星童留预言</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/5/n12858316.md#1">原本命中无子，他做了什么事？连生11个儿子</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/11/n12873157.md#1">【未解之谜】两位医生经历的临死体验</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/16/n12883841.md#1">【珍言真语】刘锐绍：中共对港人强行宣传灌输</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/15/n12882614.md#1">【财商天下】港千万富豪新高 财富增值靠什么？</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/15/n12882997.md#1">【新闻看点】拜登挚友会蔡英文 中共军演发脾气？</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/14/n12879826.md#1">【微视频】习防蚂蚁爆雷？传杨雄忘带红卡死亡</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/14/n12879968.md#1">马云“中国企业家无一善终”一语热传网络</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/14/n12880131.md#1">挺不住了？从李克强到战狼求西方别脱钩</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/13/n12877768.md#1">陈惠敏点评香港武打明星 直呼成龙是耍杂技</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/13/n12878075.md#1">69岁洪金宝近况曝光 被目击弃拐杖轮椅逛街</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/14/n12880501.md#1">刘涛代替谢娜当团长 遭蒋勤勤当众吐槽引热议</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/13/n12878323.md#1">昆凌晒4岁儿正面照 小小周宛如缩小版周杰伦</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/14/n12880190.md#1">自曝减重15公斤留后遗症 黄晓明请网友勿效仿</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/15/n12881104.md#1">上班一个月蹲厕所50小时 台男被扣薪气炸</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/13/n12877101.md#1">【重播】中医师分享5大招 告别失眠睡不着</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/13/n12876869.md#1">168断食怎么吃？照1张表加4妙招就不会失败</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/14/n12879016.md#1">NASA的“飞碟”曾坠毁 派直升机去追</a></li>
-<li><a href="https://github.com/mfaidu357/djy/blob/master/gb/21/4/15/n12881632.md#1">英男订购一袋苹果 却收到iPhone手机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mfaidu357/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mfaidu357/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/15/n11589970.htm">“生厨余”量不足 外埔绿能发电恐卡卡</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/15/n11589970.htm"></a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mfaidu357/djy/blob/master/gb/19/10/15/n11589970.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mfaidu357/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mfaidu357/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mfaidu357/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mfaidu357/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mfaidu357/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/10/15/n11589970.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
